# therapy-coach-finetune

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  SPEC.md  assess_base_model.py  assess_gemma_sessions.py  assess_short_transcripts.py  assessor.py  generate_eval_scenarios.py  generate_gemma_transcripts.sh  generate_style_examples.py  generator.py  gpt5.2-prompting-guide  initial-idea.md  llm_backend.py  pyproject.toml  run_base_model_eval.py  run_batch_assessment.py  run_gemma_interactive.py  run_therapeutic_interactive.py  transcript_generator.py
.claude/: settings.json  settings.local.json
config/: flaw-taxonomy.yaml  input-taxonomy.yaml  mlx_lora_config.yaml  system-prompt.md
config/prompts/: assessor.md  assistant.md  user_sim.md
data/assessments/: short_5000_summary.json  summary.json  transcript_1000_20251227_133027_assessment.txt  transcript_1001_20251227_135701_assessment.txt  (+6 more)
docs/: assessor-backend-comparison.md  base-model-evaluation.md  hf-jobs-troubleshooting.md  running-assessments.md
eval/: parallel_evaluator.py
reference/: assessment-rubric.md  evaluation-rubric.md  therapeutic-frameworks.md
scripts/: assess_remaining.py  assess_transcripts.py  compare_two_models.py  convert_to_gguf.py  gather_passing.py  generate_eval_personas.py  merge_lora.py  merge_lora_adapter.py  prepare_mlx_data.py  push_dataset.py  push_dataset_to_hub.py  read_convo.py  run_model_evaluation.py  slice_transcripts.py  submit_training_jobs.sh  train_gemma3_12b.py  train_local_mlx.py  train_qwen3_14b.py
tests/: test_assessor.py
(+448 files in other folders)
